Added in memory storage for recent blocks
