# docs/swagger.yaml
@@ -1,8 +1,60 @@
 basePath: /api/v1
 definitions:
+  big.Int:
+    type: object
+  dto.BlockDto:
+    properties:
+      hash:
+        type: string
+      header:
+        $ref: '#/definitions/dto.HeaderDTO'
+      transactions:
+        items:
+          $ref: '#/definitions/dto.TxDto'
+        type: array
+      withdrawals:
+        items:
+          $ref: '#/definitions/dto.WithdrawalDto'
+        type: array
+    type: object
   dto.ConfirmUserRequest:
     properties:
       code:
+        type: string
+    type: object
+  dto.HeaderDTO:
+    properties:
+      blockHash:
+        type: string
+      difficulty:
+        $ref: '#/definitions/big.Int'
+      extraData:
+        items:
+          type: integer
+        type: array
+      gasLimit:
+        type: integer
+      gasUsed:
+        type: integer
+      miner:
+        type: string
+      mixHash:
+        type: string
+      nonce:
+        type: integer
+      number:
+        $ref: '#/definitions/big.Int'
+      parentHash:
+        type: string
+      receiptsRoot:
+        type: string
+      sha3Uncles:
+        type: string
+      stateRoot:
+        type: string
+      timestamp:
+        type: integer
+      transactionsRoot:
         type: string
     type: object
   dto.JwtToken:
@@ -30,6 +82,37 @@ definitions:
       email:
         type: string
     type: object
+  dto.TxDto:
+    properties:
+      blockHash:
+        type: string
+      chainId:
+        $ref: '#/definitions/big.Int'
+      gas:
+        type: integer
+      gasPrice:
+        $ref: '#/definitions/big.Int'
+      hash:
+        type: string
+      input:
+        items:
+          type: integer
+        type: array
+      maxFeePerGas:
+        $ref: '#/definitions/big.Int'
+      nonce:
+        type: integer
+      r:
+        $ref: '#/definitions/big.Int'
+      s:
+        $ref: '#/definitions/big.Int'
+      to:
+        type: string
+      v:
+        $ref: '#/definitions/big.Int'
+      value:
+        $ref: '#/definitions/big.Int'
+    type: object
   dto.UserCreds:
     properties:
       email:
@@ -45,6 +128,17 @@ definitions:
         type: string
       surname:
         type: string
+    type: object
+  dto.WithdrawalDto:
+    properties:
+      address:
+        type: string
+      amount:
+        type: integer
+      blockHash:
+        type: string
+      validatorIndex:
+        type: integer
     type: object
 host: localhost:8080
 info:
@@ -69,6 +163,10 @@ paths:
       responses:
         "200":
           description: OK
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
         "500":
           description: Internal Server Error
       summary: Gets all users
@@ -88,6 +186,10 @@ paths:
       responses:
         "204":
           description: No Content
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
         "500":
           description: Internal Server Error
       summary: Delete user by id
@@ -117,6 +219,10 @@ paths:
           description: OK
         "400":
           description: Bad Request
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
       summary: Confrims user account
       tags:
       - auth
@@ -144,6 +250,10 @@ paths:
           description: OK
         "400":
           description: Bad Request
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
         "500":
           description: Internal Server Error
       summary: Sends code
@@ -240,6 +350,23 @@ paths:
       summary: Get headers array
       tags:
       - block
+  /block/recent:
+    get:
+      description: Returns array of recently discovered blocks
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.BlockDto'
+            type: array
+        "500":
+          description: Internal Server Error
+      summary: Get recent blocks
+      tags:
+      - block
   /block/transaction/{blockhash}:
     get:
       description: Returns paginated list of transactions
@@ -300,8 +427,10 @@ paths:
       responses:
         "200":
           description: OK
-        "400":
-          description: Bad Request
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
         "500":
           description: Internal Server Error
       summary: Gets your profile
@@ -330,6 +459,10 @@ paths:
           description: OK
         "400":
           description: Bad Request
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
         "500":
           description: Internal Server Error
       summary: Updates profile
